--- a/index.html
+++ b/index.html
@@ -586,7 +586,7 @@ THE SOFTWARE IS PROVIDED “AS IS”, WITHOUT WARRANTY OF ANY KIND, EXPRESS OR I
                     </a>
             </div>
             <div class="right-nav-button-container">
-                <a href="https://github.com/vinodjangid07/Pexelicons" target="_blank" class="star-on-github-button"  data-aos="fade-up"
+                <a href="https://github.com/varikootisivasurya" target="_blank" class="star-on-github-button"  data-aos="fade-up"
                 data-aos-offset="10"
                 data-aos-delay="50"
                 data-aos-duration="1000"
@@ -1241,7 +1241,7 @@ THE SOFTWARE IS PROVIDED “AS IS”, WITHOUT WARRANTY OF ANY KIND, EXPRESS OR I
         </div>
     </main>
     <footer><div class="footerContainer">
-        <p>Design & Built by <a href="https://github.com/vinodjangid07">@Vinodjangid07 </a>| <i class="far fa-copyright"></i> twentytwentyfour</p>
+        <p>Design & Built by <a href="https://github.com/varikootisivasurya">@varikootisivasurya</a>| <i class="far fa-copyright"></i> twentytwentyfour</p>
     </div></footer>
     <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
     <script>
